FIxed animations on mobile

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -326,6 +326,17 @@ svg {
 .author {
   animation: author 1s ease-in-out 1 0.4s forwards;
 }
+
+@keyframes author {
+  from {
+    opacity: 0;
+    margin-top: 4rem;
+  }
+  to {
+    opacity: 1;
+    margin-top: 2rem;
+   }
+}
 }
 
 //iPhone 4
@@ -363,4 +374,15 @@ svg {
 
 .author {
   animation: author 1s ease-in-out 1 0.4s forwards;
-}}
+}
+@keyframes author {
+  from {
+    opacity: 0;
+    margin-top: 4rem;
+  }
+  to {
+    opacity: 1;
+    margin-top: 2rem;
+   }
+}
+}
